improve editor reporting and delete garbage

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,12 +5,17 @@
             "label": "build",
             "type": "shell",
             "command": "odin build src -debug",
-            // "command": "odin build src",
+            // "command": "odin build src -debug 2>&1 >/dev/null | sed -e 's/\\.odin(/.odin:/g' 1>&2",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "presentation": {
+                "showReuseMessage": false,
+                "revealProblems": "onProblem",
+                "clear": true,
+            },
         }
     ]
 }
