--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,11 @@
             },
             "presentation": {
                 "showReuseMessage": false,
+                "reveal": "always",
                 "revealProblems": "onProblem",
+                "echo": true,
+                "focus": true,
+                "panel": "shared",
                 "clear": true,
             },
         }
