level stuff and stricter linting, finally fixed error line numbers

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "odin build src -debug",
-            // "command": "odin build src -debug 2>&1 >/dev/null | sed -e 's/\\.odin(/.odin:/g' 1>&2",
+            "command": "odin build src -debug -error-pos-style:unix -strict-style -vet-unused",
             "group": {
                 "kind": "build",
                 "isDefault": true
